--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,16 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "friendsofphp/php-cs-fixer": "^3.6",
+        "fzaninotto/faker": "^1.9",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.2",
+        "squizlabs/php_codesniffer": "^3.6",
         "symfony/asset": "5.4.*",
+        "symfony/browser-kit": "5.4.*",
         "symfony/console": "5.4.*",
+        "symfony/doctrine-bridge": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -33,6 +38,7 @@
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.7",
         "phpunit/phpunit": "^9.5",
         "symfony/css-selector": "5.4.*",
         "symfony/phpunit-bridge": "^6.0"
