--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,27 @@
 version: '3'
-
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-13}-alpine
+  db:
+    image: mysql:5
+    ports:
+      - "3307:3306"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
-      POSTGRES_USER: ${POSTGRES_USER:-symfony}
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - ./data:/var/lib/mysql
 
-volumes:
-###> doctrine/doctrine-bundle ###
-  db-data:
-###< doctrine/doctrine-bundle ###
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "9999:80"
+    depends_on:
+      - db
+
+  php:
+    build: .
+    ports:
+      - "8888:80"
+    depends_on:
+      - db
+    volumes:
+      - ./docker/vhosts:/etc/apache2/sites-enabled
+      - ./app:/var/www
