--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -1,4 +1,4 @@
-name: Symfony
+name: s_immo
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  symfony-tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
     #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
@@ -33,7 +33,7 @@ jobs:
       run: |
         mkdir -p data
         touch data/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
+    - name: Execute tests (Unit and Functionnal tests) via PHPUnit
       env:
         DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
       run: vendor/bin/phpunit
